html/odmb/main.css
@charset "UTF-8";
html {
    overflow-y: scroll;
    overflow: -moz-scrollbars-vertical;
}

body {
    background-repeat: repeat-x;
    background-color: #FFFFFF;
    margin: 0px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 13px;
    min-height:1151%
}

iframe{
    border: 0px;
    width: 100%;
}

iframe#sidebarframe{
    overflow: hidden;
}

iframe#headerframe{
    height: 160px;
}

iframe#footerframe{
    height: 90px;
}

.header{
    width:830px; height: 10px;
    margin-left: auto; margin-right: auto;
}

.header ul{
    align: center;
    font-size: 15px;
    padding-left: 5px;
    margin-left: 0px;
    padding-right: 0px;
    margin-right: 0px;
    padding-top: 0px;
    margin-top: 0px;
    padding-bottom: 4px;
    margin-bottom: 0px;
    vertical-align: top;
}

.header li{
    display: inline;	
}

.logo{
    padding-top: 25px;
    text-transform: lowercase;
    color:#CCCCCC;
    font-size: 32px;
    height: 19px;
    font-weight:normal;
}

.logo-thin{
    color:#CCCCCC;
    font-weight:normal;
}

.logo h1{
    font-size: 36px;
    padding: 0px;
    margin: 0px;
    color: #999999;
    font-weight:normal;
}

.navil{
    width: 500px;
    height: 50px;
    vertical-align: top;
}

.navigation{
    font-size: 12px;
    color: #333333;
    width: 850px;
    text-align: center;
    padding-top: 57px;
}
#odmbnav{
    padding-top: 7px;
}

.navigation ul li a{
    color: #333333;
    font-weight: normal;
    text-decoration: none;
    text-align: center;
    padding-right: 17px;  padding-left: 17px;
    padding-top: 10px;
    display: block;
    float: left;
    height: 41px;
    line-height: 21px;
    text-align: center;
    display: inline;
}

.navigation a:hover, .navigation ul li .active{
    color: #666666;
    text-decoration:none;
    background: url(images/active.png) center;
}

.main{
    width:900px;
    margin-left: auto; margin-right: auto;
    margin-top: 0px;
}

.leftColumn{
    width: 220px;
    padding-right: 15px;
    float: left;
}

.rightColumn{
    width: 645px;
    float: left;
    padding-left:20px;
    text-align:justify;
}

.separator{
    height: 28px;
    clear: both;
}

.footer{
    height: 50px;
    background-color:#000000;
    padding-top: 0px;
    color: #CCCCCC;
}

.footer-inner{
    width:822px;
    margin-left: auto; margin-right: auto;
}

.footer-left{
    width: 300px;
    float:left;
}

.footer-right{
    width: 516px;
    float: left;
    text-align: right;
}

.footer ul{
    padding-left: 0px;
    margin-left: 0px;
    padding-right: 0px;
    margin-right: 0px;
    padding-top: 0px;
    margin-top: 0px;
    padding-bottom: 4px;
    margin-bottom: 0px;
}

.footer li{
    display: inline;
}

.footer a{
    color: #CCCCCC;
    text-decoration: none;
}

.small{
    font-size: 11px;
    color:#666666;
}

.small a{
    color:#666666;
    text-decoration: none;
}

.small a:hover{
    color: #333333;
    text-decoration: none;
}

.padd-bottom{
    padding-bottom: 5px;
}

h1{
    font-size: 18px;
    color:#333333;
}

h2{
    font-size: 16px;
    color:#333333;
}

h3, h4{
    font-size: 15px;
    color:#333333;
    padding-bottom: 2px;
    margin-bottom: 4px;
}

p{
    line-height: 18px;
}

a{
    color:#333333;
    text-decoration: underline;
}

a:hover{
    color:#999999;
    text-decoration: none;
}

div#sidebar ul {
    margin:2px;
    padding:5px;
    list-style:none;
}
div#sidebar li  {
    margin-bottom:6px;
}
div#sidebar li ul {
    border-top:1px solid #ddd;
    margin-bottom:20px;
}
div#sidebar li ul li {
    display:block;
    padding:7px 15px;
    border-bottom:1px solid #ddd;
    color:#777;
}

div.img
{
    margin:2px;
    margin-bottom:40px;
    border:1px solid #0000ee;
    height:auto;
    width:auto;
    float:left;
    text-align:center;
}
div.img img
{
    display:inline;
    margin:3px;
    border:1px solid #ffffff;
}
div.img a:hover img
{
    border:1px solid #0000ff;
}
div.desc
{
    text-align:center;
    font-weight:normal;
    width:200px;
    margin:2px;
}

